<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/disconnectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/disconnect"
        android:drawableLeft="@drawable/wifi_signal_off"
        android:text="@string/disconnect"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded"
        android:visibility="visible">
    </Button>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_wifi_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/wifi_symbol"
        android:id="@+id/wifiEnabledIcon"
        android:visibility="visible">
    </ImageView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/switchControlMode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disconnectButton"
        android:id="@+id/controlModeHolder">

        <ImageView
            android:id="@+id/mower_collision"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/mower_description"
            android:src="@drawable/mower_base_temp_min"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        </ImageView>

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/vector_control_arrow_up"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/arrow_down"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/arrow"
            android:id="@+id/arrow_up"
            android:tint="@color/black">
        </ImageButton>

        <ImageButton
            android:id="@+id/arrow_right"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/arrow"
            android:src="@drawable/vector_control_arrow_right"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/arrow_left"
            android:layout_marginStart="40dp"
            android:tint="@color/black">
        </ImageButton>

        <ImageButton
            android:id="@+id/arrow_left"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/arrow"
            android:src="@drawable/vector_control_arrow_left"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/arrow_right"
            android:layout_marginEnd="40dp"
            android:tint="@color/black">
        </ImageButton>

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/vector_control_arrow_down"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/mower_collision"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/arrow_up"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/arrow"
            android:id="@+id/arrow_down"
            android:tint="@color/black">
        </ImageButton>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="STOP"
            app:layout_constraintBottom_toTopOf="@id/arrow_down"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/arrow_up"
            android:id="@+id/stopButton"
            android:visibility="visible">
        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switchToManualMode"
        app:layout_constraintBottom_toTopOf="@+id/switchcollisionindicator"
        app:layout_constraintTop_toBottomOf="@+id/controlModeHolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/switchControlMode"
        android:visibility="visible">
    </Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SWITCH COLLISION"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchControlMode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/switchcollisionindicator"
        android:visibility="visible">
    </Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/connectButton"
        android:visibility="invisible">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>